Afegit DirectoryIndex a la conf d'Apache

--- a/11. Ejemplo de creacion webs Apache.md
+++ b/11. Ejemplo de creacion webs Apache.md
@@ -59,6 +59,7 @@ Crea y edita el archivo: `sudo nano /etc/apache2/sites-available/siurells.es.con
     ServerName www.siurells.es
     ServerAlias siurells.es
     DocumentRoot /var/www/siurells.es/html
+    DirectoryIndex index.html index.php
     
     # 6. Registro de errores y acceso (configuración necesaria)
     ErrorLog ${APACHE_LOG_DIR}/siurells.es_error.log
@@ -101,6 +102,7 @@ Crea y edita el archivo: `sudo nano /etc/apache2/sites-available/ximbombes.cat.c
     ServerName www.ximbombes.cat
     ServerAlias ximbombes.cat
     DocumentRoot /var/www/ximbombes.cat/html
+    DirectoryIndex index.html index.php
 
     # 6. Registro de errores y acceso (configuración necesaria)
     ErrorLog ${APACHE_LOG_DIR}/ximbombes.cat_error.log
